--- a/src/mainboard/emulation/qemu-armv7/Kconfig
+++ b/src/mainboard/emulation/qemu-armv7/Kconfig
@@ -29,9 +29,9 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select BOOTBLOCK_CONSOLE
 	select EARLY_CONSOLE
 	select CONSOLE_SERIAL
-	select ARM_BOOTBLOCK_ARMV7
-	select ARM_ROMSTAGE_ARMV7
-	select ARM_RAMSTAGE_ARMV7
+	select ARCH_BOOTBLOCK_ARM_V7
+	select ARCH_ROMSTAGE_ARM_V7
+	select ARCH_RAMSTAGE_ARM_V7
 	select BOARD_ROMSIZE_KB_4096
 
 config MAINBOARD_DIR
