--- a/src/soc/samsung/exynos5250/Kconfig
+++ b/src/soc/samsung/exynos5250/Kconfig
@@ -1,13 +1,12 @@
 config CPU_SAMSUNG_EXYNOS5250
-	select ARCH_ARM
 	select CPU_HAS_BOOTBLOCK_INIT
 	select HAVE_MONOTONIC_TIMER
 	select HAVE_UART_SPECIAL
 	select EARLY_CONSOLE
 	select DYNAMIC_CBMEM
-	select ARM_BOOTBLOCK_ARMV7
-	select ARM_ROMSTAGE_ARMV7
-	select ARM_RAMSTAGE_ARMV7
+	select ARCH_BOOTBLOCK_ARM_V7
+	select ARCH_ROMSTAGE_ARM_V7
+	select ARCH_RAMSTAGE_ARM_V7
 	bool
 	default n
 
