--- a/src/cpu/amd/agesa/Kconfig
+++ b/src/cpu/amd/agesa/Kconfig
@@ -25,7 +25,9 @@ config CPU_AMD_AGESA
         default y if CPU_AMD_AGESA_FAMILY15
         default y if CPU_AMD_AGESA_FAMILY15_TN
         default n
-	select ARCH_X86
+	select ARCH_BOOTBLOCK_X86_32
+	select ARCH_ROMSTAGE_X86_32
+	select ARCH_RAMSTAGE_X86_32
 	select TSC_SYNC_LFENCE
 	select UDELAY_LAPIC
 
