--- a/src/cpu/armltd/cortex-a9/Kconfig
+++ b/src/cpu/armltd/cortex-a9/Kconfig
@@ -1,6 +1,8 @@
 config CPU_ARMLTD_CORTEX_A9
 	bool
-	select ARCH_ARM
+	select ARCH_BOOTBLOCK_ARM_V7
+	select ARCH_ROMSTAGE_ARM_V7
+	select ARCH_RAMSTAGE_ARM_V7
 	select EARLY_CONSOLE
 	default n
 
