--- a/src/soc/nvidia/tegra124/Kconfig
+++ b/src/soc/nvidia/tegra124/Kconfig
@@ -1,16 +1,15 @@
 config SOC_NVIDIA_TEGRA124
 	bool
 	default n
-	select ARCH_ARM
 	select HAVE_UART_MEMORY_MAPPED
 	select HAVE_UART_SPECIAL
 	select BOOTBLOCK_CONSOLE
 	select EARLY_CONSOLE
 	select DYNAMIC_CBMEM
 	select ARM_BOOTBLOCK_CUSTOM
-	select ARM_BOOTBLOCK_ARMV4
-	select ARM_ROMSTAGE_ARMV7
-	select ARM_RAMSTAGE_ARMV7
+	select ARCH_BOOTBLOCK_ARM_V4
+	select ARCH_ROMSTAGE_ARM_V7
+	select ARCH_RAMSTAGE_ARM_V7
 	select ARM_LPAE
 
 if SOC_NVIDIA_TEGRA124
