--- a/src/soc/qualcomm/ipq806x/Kconfig
+++ b/src/soc/qualcomm/ipq806x/Kconfig
@@ -1,10 +1,9 @@
 config SOC_QC_IPQ806X
 	bool
 	default n
-	select ARCH_ARM
-	select ARM_BOOTBLOCK_ARMV7
-	select ARM_RAMSTAGE_ARMV7
-	select ARM_ROMSTAGE_ARMV7
+	select ARCH_BOOTBLOCK_ARM_V7
+	select ARCH_RAMSTAGE_ARM_V7
+	select ARCH_ROMSTAGE_ARM_V7
 	select BOOTBLOCK_CONSOLE
 	select DYNAMIC_CBMEM
 	select HAVE_UART_MEMORY_MAPPED
