--- a/src/soc/qualcomm/ipq806x/Makefile.inc
+++ b/src/soc/qualcomm/ipq806x/Makefile.inc
@@ -1,10 +1,12 @@
 bootblock-y += cbfs.c
 bootblock-y += clock.c
 bootblock-y += gpio.c
+bootblock-y += timer.c
 
 romstage-y += cbfs.c
 romstage-y += clock.c
 romstage-y += gpio.c
+romstage-y += timer.c
 
 ramstage-y += cbfs.c
 ramstage-y += clock.c
