ipq8064: make UART driver work in bootblock
This patch it the last one in the chain adapting the ipq9064 UART
driver for use in coreboot. A new config option
(CONSOLE_SERIAL_IPQ806X) is being introduced to control inclusion of
the driver.

The previously introduced uart_wrapper.c is now included in the build
to provide the console driver structure used by ramstage.

Necessary configuration options are added to allow use of UART in the
bootblock.

BUG=chrome-os-partner:27784

TEST=with this change the coreboot image on AP148 prints a banner on
   start up:

coreboot-4.0 Wed Apr 23 16:24:51 PDT 2014 starting...

Change-Id: I129ee30ba17a5061b30cfee56c135df31eba98b5
Signed-off-by: Vadim Bendebury <vbendeb@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/196663

--- a/src/console/Kconfig
+++ b/src/console/Kconfig
@@ -28,6 +28,14 @@ config CONSOLE_SERIAL8250
 	help
 	  Send coreboot debug output to an I/O mapped serial port console.
 
+config CONSOLE_SERIAL_IPQ806X
+	bool "Serial port console output for Qualcomm SGMI port"
+	depends on CONSOLE_SERIAL
+	depends on SOC_QC_IPQ806X
+	default y
+	help
+	  Send coreboot debug output to an SGMI based uart (ipq806x)
+
 config CONSOLE_SERIAL8250MEM
 	bool "Serial port console output (memory mapped, 8250-compatible)"
 	depends on CONSOLE_SERIAL
