--- a/src/mainboard/google/storm/Kconfig
+++ b/src/mainboard/google/storm/Kconfig
@@ -19,9 +19,10 @@
 
 if BOARD_GOOGLE_STORM
 
-config BOARD_SPECIFIC_OPTIONS # dummy
+config BOARD_SPECIFIC_OPTIONS
 	def_bool y
 	select ARCH_ARM
+	select MAINBOARD_HAS_BOOTBLOCK_INIT
 	select SOC_QC_IPQ806X
 
 config MAINBOARD_DIR
