--- a/src/soc/qualcomm/ipq806x/Kconfig
+++ b/src/soc/qualcomm/ipq806x/Kconfig
@@ -2,10 +2,13 @@ config SOC_QC_IPQ806X
 	depends on ARCH_ARM
 	bool
 	default n
-	select ARM_BOOTBLOCK_ARMV4
-	select ARM_ROMSTAGE_ARMV7
-	select ARM_RAMSTAGE_ARMV7
+	select ARM_BOOTBLOCK_ARMV7
 	select ARM_LPAE
+	select ARM_RAMSTAGE_ARMV7
+	select ARM_ROMSTAGE_ARMV7
+	select BOOTBLOCK_CONSOLE
+	select HAVE_UART_MEMORY_MAPPED
+	select HAVE_UART_SPECIAL
 
 if SOC_QC_IPQ806X
 
@@ -15,11 +18,11 @@ config BOOTBLOCK_ROM_OFFSET
 
 config CBFS_HEADER_ROM_OFFSET
 	hex "offset of master CBFS header in ROM"
-	default 0x221000
+	default 0x224000
 
 config CBFS_ROM_OFFSET
 	hex "offset of CBFS data in ROM"
-	default 0x221080
+	default 0x224080
 
 config MBN_ENCAPSULATION
 	depends on USE_BLOBS
