coreboot arm64: Add support for arm64 into coreboot framework
Add support for enabling different coreboot stages (bootblock, romstage and
ramstage) to have arm64 architecture. Most of the files have been copied over
from arm/ or arm64-generic work.

BUG=None
BRANCH=None
TEST=Compiled successfully for rush board with bootblock being armv4 and
romstage and ramstage being armv8

Change-Id: Icd59bec55c963a471a50e30972a8092e4c9d2fb2
Signed-off-by: Furquan Shaikh <furquan@google.com>
Reviewed-on: https://chromium-review.googlesource.com/197397
Reviewed-by: Aaron Durbin <adurbin@chromium.org>
Commit-Queue: Furquan Shaikh <furquan@chromium.org>
Tested-by: Furquan Shaikh <furquan@chromium.org>

--- a/src/Kconfig
+++ b/src/Kconfig
@@ -234,13 +234,13 @@ config ARCH_ARM
 	bool
 	default n
 
-config ARCH_AARCH64
+config ARCH_ARM64
 	bool
 	default n
 
 source src/arch/x86/Kconfig
 source src/arch/arm/Kconfig
-source src/arch/aarch64/Kconfig
+source src/arch/arm64/Kconfig
 
 menu "Chipset"
 
@@ -270,6 +270,7 @@ config TPM
 	default n
 	select LPC_TPM if ARCH_X86
 	select I2C_TPM if ARCH_ARM
+	select I2C_TPM if ARCH_ARM64
 	help
 	  Enable this option to enable TPM support in coreboot.
 
@@ -298,6 +299,7 @@ config HAVE_UART_IO_MAPPED
 	bool
 	default y if ARCH_X86
 	default n if ARCH_ARM
+	default n if ARCH_ARM64
 
 config HAVE_UART_MEMORY_MAPPED
 	bool
