--- a/src/mainboard/google/Kconfig
+++ b/src/mainboard/google/Kconfig
@@ -54,6 +54,8 @@ config BOARD_GOOGLE_PEPPY
 	bool "Peppy"
 config BOARD_GOOGLE_RAMBI
 	bool "Rambi"
+config BOARD_GOOGLE_RUSH
+	bool "Rush"
 config BOARD_GOOGLE_SAMUS
 	bool "Samus"
 config BOARD_GOOGLE_SLIPPY
@@ -79,6 +81,7 @@ source "src/mainboard/google/parrot/Kconfig"
 source "src/mainboard/google/peach_pit/Kconfig"
 source "src/mainboard/google/peppy/Kconfig"
 source "src/mainboard/google/rambi/Kconfig"
+source "src/mainboard/google/rush/Kconfig"
 source "src/mainboard/google/samus/Kconfig"
 source "src/mainboard/google/slippy/Kconfig"
 source "src/mainboard/google/storm/Kconfig"
