--- a/src/mainboard/google/nyan_blaze/Makefile.inc
+++ b/src/mainboard/google/nyan_blaze/Makefile.inc
@@ -30,6 +30,7 @@ subdirs-y += bct
 bootblock-y += boardid.c
 bootblock-y += bootblock.c
 bootblock-y += pmic.c
+bootblock-y += reset.c
 
 romstage-y += romstage.c
 romstage-y += sdram_configs.c
