rtc: Add an RTC API, and implement it for x86.
This CL adds an API for RTC drivers, and implements its two functions, rtc_get
and rtc_set, for x86's RTC. The function which resets the clock when the CMOS
has lost state now uses the RTC driver instead of accessing the those registers
directly. The availability of "ALTCENTURY" is now set through a kconfig
variable so it can be available to the RTC driver without having to have a
specialized interface.

BUG=None
TEST=Built and booted on Link with the event log code modified to use the RTC
interface. Verified that the event times were accurate.
BRANCH=nyan

Change-Id: Ifa807898e583254e57167fd44932ea86627a02ee
Signed-off-by: Gabe Black <gabeblack@google.com>
Reviewed-on: https://chromium-review.googlesource.com/197795
Reviewed-by: David Hendricks <dhendrix@chromium.org>
Tested-by: Gabe Black <gabeblack@chromium.org>
Commit-Queue: Gabe Black <gabeblack@chromium.org>

--- a/src/drivers/pc80/Kconfig
+++ b/src/drivers/pc80/Kconfig
@@ -22,3 +22,18 @@ config LPC_TPM
 	  Enable this option to enable TPM support in coreboot.
 
 	  If unsure, say N.
+
+config DRIVERS_MC146818_RTC
+	bool
+	default y if ARCH_X86
+	default n if !ARCH_X86
+
+config DRIVERS_MC146818_CMOS
+	bool
+	default y if ARCH_X86
+	default n if !ARCH_X86
+
+config DRIVERS_RTC_HAS_ALTCENTURY
+	bool "The RTC supports alt century"
+	depends on DRIVERS_MC146818_RTC
+	default y
