--- a/src/drivers/pc80/Makefile.inc
+++ b/src/drivers/pc80/Makefile.inc
@@ -1,19 +1,26 @@
-ramstage-y += mc146818rtc.c
+ramstage-$(CONFIG_DRIVERS_MC146818_RTC) += mc146818rtc.c
+ramstage-$(CONFIG_DRIVERS_MC146818_CMOS) += mc146818.c
 ramstage-y += isa-dma.c
 ramstage-y += i8254.c
 ramstage-y += i8259.c
 ramstage-$(CONFIG_UDELAY_IO) += udelay_io.c
 ramstage-y += keyboard.c
-romstage-$(CONFIG_LPC_TPM) += tpm.c
 
+romstage-$(CONFIG_LPC_TPM) += tpm.c
+ifeq ($(CONFIG_DRIVERS_MC146818_CMOS),y)
 romstage-$(CONFIG_USE_OPTION_TABLE) += mc146818rtc_early.c
+endif
+
 subdirs-y += vga
 
 cbfs-files-$(CONFIG_HAVE_CMOS_DEFAULT) += cmos.default
 cmos.default-file = $(CONFIG_CMOS_DEFAULT_FILE):nvramtool
 cmos.default-type = 0xaa
 
+smm-y += mc146818.c
 smm-y += mc146818rtc.c
 
 $(obj)/drivers/pc80/mc146818rtc.ramstage.o : $(obj)/build.h
+$(obj)/drivers/pc80/mc146818.ramstage.o : $(obj)/build.h
 $(obj)/drivers/pc80/mc146818rtc.smm.o : $(obj)/build.h
+$(obj)/drivers/pc80/mc146818.smm.o : $(obj)/build.h
