--- a/src/drivers/Kconfig
+++ b/src/drivers/Kconfig
@@ -17,6 +17,7 @@
 ## Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
 ##
 
+source src/drivers/ams/Kconfig
 source src/drivers/ati/Kconfig
 source src/drivers/dec/Kconfig
 source src/drivers/elog/Kconfig
